# UtopiaV3

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS..md  CodeStyle.md  Credits.md  FAQ.md  LICENSE  README.md  doxygen.config  init.c  main.c  meson.build
.github/ISSUE_TEMPLATE/: bug-report.md  research.md
Core/: CMakeLists.txt
Core/Binaries/mdlk/: CMakeLists.txt  main.c
Core/Binaries/test/: CMakeLists.txt  test.c
Core/Headers/: features.h
Core/Libraries/: CMakeLists.txt
Core/Libraries/libC/: CMakeLists.txt  reexported_symbols.list
Core/Libraries/libC/arch/x86_64/covenant/bits/: everytype.h.in  int.h
Core/Libraries/libC/arr/: avail.c  bytes.c  data.c  init.c  len.c  push.c  ready.c  trunc.c  vfmt.c
Core/Libraries/libC/dyn/: alloc.c  cat.c  idxcat.c  insert.c  push.c  ready.c
Core/Libraries/libC/file/: close.c  feed.c  filestrtomode.c  flush.c  get.c  int_fdopen.c  nput.c  open.c  peek.c  read.c  seek.c  write.c
Core/Libraries/libC/fmt/: fmt.c  init.c  install.c  nput.c  put.c  verb.c
Core/Libraries/libC/hsh/: murmur3.c  murmur32.c  octets.c  rol32.c  update.c
Core/Libraries/libC/include/covenant/: bool.h  dat.h  everytype.h.in  fn.h  hsh.h  int.h  nix.h  status.h  std.h  u.h
Core/Libraries/libC/internal/: _fdopen.h  _modes.h  attributes.h  impl.h  std_impl.h
Core/Libraries/libC/ioq/: feed.c  flush.c  fmt.c  get.c  nput.c  stderr.c  stdin.c  stdout.c  vfmt.c
Core/Libraries/libC/mem/: chr.c  cpy.c  set.c
Core/Libraries/libC/mem/x86_64/: set.s
Core/Libraries/libC/nix/: allrw.c  fdset.c  munmap.c  stat.c
Core/Libraries/libC/std/: alloc.c  bsearch.c  errno.c  errstr.c  exit.c  free.c  getsyserr.c  malloc.c  nbsearch.c  pubrealloc.c  realloc.c  setalloc.c  strerror.c
Core/Libraries/libC/str/: chr.c  cmp.c  cpy.c  equal.c  len.c  ncpy.c  pncpy.c
Core/Libraries/libC/u32/: pack.c  unpack.c
Core/Libraries/libC/utf8/: charntorune.c  chartorune.c  checkrune.c  mtab.c
Core/Libraries/libCompat/: CMakeLists.txt
Core/Libraries/libCompat/include/: alltypes.h.in  string.h
Core/Libraries/libCompat/string/: memset.c
Core/Libraries/libCovenant/: README.md
Core/Libraries/libGeneric/: CMakeLists.txt
Core/Libraries/libGeneric/hm/: get.c  init.c  insert.c
Core/Libraries/libGeneric/internal/: hm_get_hash.c  hm_impl.h  hm_resize.c  vec_assign.c  vec_grow.c  vec_impl.h  vec_move_left.c  vec_move_right.c  vec_offset.c  vec_realloc.c
Core/Libraries/libGeneric/tq/: add.c  getn.c  getnat.c  getv.c  getvat.c  init.c  insert.c  push.c  (+3 more)
Core/Libraries/libKernel/: CMakeLists.txt  README.md  exported_symbols.list
Core/Libraries/libKernel/arch/generic/bits/: errnum.h
Core/Libraries/libKernel/arch/generic/covenant/bits/: errcode.h
Core/Libraries/libKernel/arch/x86_64/bits/: syscall.h.in
Core/Libraries/libKernel/arch/x86_64/covenant/bits/: limits.h  mman.h  syscall.h.in
Core/Libraries/libKernel/errno/: errno.c
Core/Libraries/libKernel/include/: errnum.h  ukernel.h
Core/Libraries/libKernel/include/covenant/: errcode.h  limits.h  shared.h
Core/Libraries/libKernel/include/covenant/kernel/: basic.h
Core/Libraries/libKernel/include/covenant/sys/: mman.h  syscall.h
Core/Libraries/libKernel/internal/: kfeatures.h  syscall.h  syscall_ret.c
Core/Libraries/libKernel/kernel/: close.c  exit.c  fcntl.c  fd_write.c  mmap.c  munmap.c  open2.c  open3.c  read.c  stat.c  write.c
Core/Libraries/libMacho/: CMakeLists.txt  main.c
Core/Libraries/libSystem/: CMakeLists.txt  Makefile  configure
Core/Libraries/libSystem/arch/: CMakeLists.txt  x86_64.s
Core/Libraries/libSystem/arch/generic/bits/: errno.h
Core/Libraries/libSystem/arch/x86_64/: syscall_arch.h
Core/Libraries/libSystem/arch/x86_64/bits/: stdint.h  syscall.h.in
Core/Libraries/libSystem/include/: alltypes.h.in  errno.h  features.h  limits.h  malloc.h  newixtypes.h.in  saint_alliance.h.in  stdbool.h  stdint.h  stdlib.h  stdmem.h  str.h  syscall.h
Core/Libraries/libSystem/include/sys/: syscall.h
Core/Libraries/libSystem/ldso/: dynlink.c
Core/Libraries/libSystem/src/include/: features.h
Core/Libraries/libSystem/src/internal/: malloc_np.h  syscall.h  version.c
Core/Libraries/libSystem/src/malloc/jemalloc/include/jemalloc/: jemalloc.h  jemalloc_Utopia.h
Core/Libraries/libSystem/src/mem/: chr.c
Core/Libraries/libSystem/src/str/: cmp.c  len.c
Core/Libraries/libSystem/src/sys/: exit.c
Core/Libraries/libSystem/sys/generic/bits/: float.h
Core/Libraries/libSystem/sys/x86_64/bits/: alltypes.h.in  limits.h  reg.h
Core/Support/: CMakeLists.txt
Core/Support/mdlk/: CMakeLists.txt  initialization.c  main.c  mdlk.c  mdlk_startup.S  ptrkey.c  relocations.c  resolution.c
Core/Support/mdlk/include/mdlk/: images.h  mdlk.h
Core/Support/mdlk/internal/: _images.h  _leb128.h  _ptrkey.h  _relocations.h
Core/Support/mdlk/loader/: images.c
Core/Support/mdlk/private/: _images.h
Core/Support/mdlk/stub/: stubs.S
Factory/: README.md  build.sh  functions.sh  run.sh  setup_env.sh  sources.sh
Factory/CrossTools/: BuildBinutils.sh  BuildGCC.sh  BuildGCCPassOne.sh  BuildGCCPassTwo.sh  BuildKernelHeaders.sh  BuildMusl.sh  BuildlibSystem.sh  PatchGCCBootstrap.sh
Factory/Toolchain/: AdjustToolchain.sh  BuildBinutils.sh  BuildGCC.sh  BuildKernelHeaders.sh  BuildlibSystem.sh  Buildlibstdcxx.sh  ReadjustToolchain.sh
Factory/Toolchain/CMake/: GNUToolchain.txt.in  UtopiaStageOne.txt.in
Kernel/: README.md
Libraries/: meson.build
Libraries/libfetch/13.0/: common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  ftp.errors  http.c  http.errors  meson.build
Meta/CMake/: covenant.cmake  libcompat.cmake  utils.cmake
Meta/CMake/Quetza/: CMakeLists.txt
Meta/Filler/: dummy.c
Meta/Tools/: ld-wrapper.sh.in
Meta/configs/: BusyBoxDefault
Programs/: meson.build
Programs/fetch/: meson.build
Programs/fetch/13.0/: fetch.c  meson.build
System/Settings/: ld-musl-ARCH.path
Toolchain/: BuildBinutils.sh  BuildGCC.sh  BuildKernelHeaders.sh  BuildMusl.sh  README.md
cmake/: utopia_exe.cmake  utopia_lib.cmake
src/: CMakeLists.txt  SetupEnv.sh
(+68 files in other folders)
